--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -135,7 +135,8 @@
 
       <div class="profile-setup-form">
         <div class="profile-avatar-section">
-          <div class="profile-setup-avatar">
+          <div class="profile-setup-avatar" (click)="fileInput.click()" (keydown.enter)="fileInput.click()"
+            (keydown.space)="fileInput.click()" tabindex="0" role="button" aria-label="Select profile image">
             @if (profileImage()) {
             <img [src]="profileImage()" alt="Profile" class="profile-preview" />
             } @else {
@@ -145,9 +146,6 @@
             }
             <input type="file" accept="image/*" (change)="onFileSelected($event)" #fileInput class="hidden-file-input"
               title="Select profile image" />
-            <button mat-icon-button class="change-photo-btn" (click)="fileInput.click()">
-              <mat-icon>photo_camera</mat-icon>
-            </button>
           </div>
         </div>
 
@@ -162,7 +160,7 @@
     </div>
 
     <div class="continue-button-container">
-      <button mat-raised-button color="primary" (click)="generateNewKey()">
+      <button mat-flat-button (click)="generateNewKey()">
         <mat-icon>arrow_forward</mat-icon>
         Create Account
       </button>
