--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -119,8 +119,8 @@
         <h3>Choose your region:</h3>
         @for (region of availableRegions(); track region.name) {
         <button class="region-option" mat-button (click)="selectRegionManually(region)">
-          <span class="region-flag">{{ region.flag }}</span>
-          <span class="region-name">{{ region.name }}</span>
+          <mat-icon class="region-flag">travel_explore</mat-icon>
+          <span class="region-name">{{ region.name }}</span>&nbsp;
           <span class="region-latency">{{ region.latency }}</span>
         </button>
         }
