--- a/src/app/components/login-dialog/login-dialog.component.scss
+++ b/src/app/components/login-dialog/login-dialog.component.scss
@@ -374,8 +374,8 @@
 
 .region-option {
   display: flex;
-  align-items: center;
-  justify-content: space-between;
+  // align-items:first baseline;
+  // justify-content: space-between;
   width: 100%;
   margin-bottom: 0.5rem;
   padding: 0.75rem;
