--- a/src/app/components/introduction/introduction.html
+++ b/src/app/components/introduction/introduction.html
@@ -29,6 +29,14 @@
                     </div>
                 </mat-card-content>
             </mat-card>
+
+            <!-- Learn more link button -->
+            <div class="learn-more-section">
+                <button mat-button class="learn-more-button" (click)="showWelcomeDialog()">
+                    <mat-icon>info</mat-icon>
+                    Learn about Nostr and Nostria
+                </button>
+            </div>
         </div>
 
         <!-- Logo and branding section -->
