--- a/src/app/pages/feeds/feeds.component.scss
+++ b/src/app/pages/feeds/feeds.component.scss
@@ -4,6 +4,16 @@ app-user-profile {
   padding: 0.4rem;
 }
 
+// Followset container styles
+.followset-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  padding: 2rem;
+  background-color: var(--mat-app-background-color);
+}
+
 .home-container {
   display: flex;
   flex-direction: column;
@@ -149,8 +159,7 @@ app-user-profile {
         height: 3px;
       }
 
-      &::-webkit-scrollbar-thumb {
-      }
+      &::-webkit-scrollbar-thumb {}
 
       .column-selector-button {
         display: flex;
@@ -169,12 +178,10 @@ app-user-profile {
         &.active {
           // background-color: var(--mat-sys-primary);
 
-          mat-icon {
-          }
+          mat-icon {}
         }
 
-        &:hover:not(.active) {
-        }
+        &:hover:not(.active) {}
 
         &.add-column {
           min-width: 40px;
@@ -808,8 +815,7 @@ app-user-profile {
           background-color: var(--mat-sys-primary);
         }
 
-        &:hover:not(.active) {
-        }
+        &:hover:not(.active) {}
       }
     }
 
@@ -947,8 +953,7 @@ app-user-profile {
         height: 3px;
       }
 
-      &::-webkit-scrollbar-thumb {
-      }
+      &::-webkit-scrollbar-thumb {}
 
       // Prevent reflow during drag
       &.cdk-drop-list-dragging {
@@ -1000,8 +1005,7 @@ app-user-profile {
         }
       }
 
-      &:hover:not(.active):not(.add-tab) {
-      }
+      &:hover:not(.active):not(.add-tab) {}
 
       &.add-tab {
         padding: 12px 8px;
@@ -1157,8 +1161,7 @@ app-user-profile {
   transition: transform 300ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-.columns-wrapper.cdk-drop-list-dragging
-  .column-unit:not(.cdk-drag-placeholder) {
+.columns-wrapper.cdk-drop-list-dragging .column-unit:not(.cdk-drag-placeholder) {
   transition: transform 300ms cubic-bezier(0, 0, 0.2, 1);
 }
 
