--- a/src/app/pages/feeds/feeds.component.html
+++ b/src/app/pages/feeds/feeds.component.html
@@ -6,8 +6,7 @@
   <app-followset title="Welcome! Let's get you started" [availableInterests]="availableInterests()"
     [suggestedProfiles]="suggestedProfiles()" [selectedInterests]="selectedInterests()"
     [followingProfiles]="followingProfiles()" [detectedRegion]="detectedRegion()"
-    (interestToggled)="toggleInterest($event)" (profileToggled)="toggleFollow($event)"
-    (completed)="onFollowsetComplete()"></app-followset>
+    (interestToggled)="toggleInterest($event)" (completed)="onFollowsetComplete($event)"></app-followset>
 </div>
 } @else {
 <div class="home-container" [ngClass]="columnLayout()">
