--- a/src/app/pages/settings/about/about.component.html
+++ b/src/app/pages/settings/about/about.component.html
@@ -39,7 +39,7 @@
 
   <p>
     <button mat-button (click)="resetIntroduction()">
-      Show introduction again
+      Learn about Nostr and Nostria
     </button>
   </p>
 
